Finished the experience charts and fixed the navbar z-index issue.

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -4,6 +4,9 @@
 :last-child {
   margin-bottom: 0; }
 
+nav, .side-nav {
+  z-index: 100; }
+
 nav ul li:hover, .side-nav li:hover {
   background-color: #3d3d3d !important; }
 
@@ -93,7 +96,9 @@ a {
 .progress-row {
   margin-bottom: 0.25em; }
   .progress-row:hover .progress {
-    height: 1em; }
+    height: 1.25em; }
+    .progress-row:hover .progress .experience-label {
+      opacity: 1; }
 
 .progress {
   transition: height 0.5s;
@@ -106,6 +111,19 @@ a {
   float: right;
   padding: 0 0.25em;
   font-weight: bold; }
+
+.experience-label {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 0.8em;
+  font-weight: bolder;
+  padding: 0 0.5em;
+  background-color: rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  transition: opacity 0.5s; }
 
 .under-construction {
   z-index: -1;
