--- a/src/sass/_experience-chart.scss
+++ b/src/sass/_experience-chart.scss
@@ -4,7 +4,11 @@
   margin-bottom: 0.25em;
 
   &:hover .progress {
-	height: 1em;
+	height: 1.25em;
+
+    .experience-label {
+      opacity: 1;
+    }
   }
 }
 
@@ -22,4 +26,19 @@
   float: right;
   padding: 0 0.25em;
   font-weight: bold;
+}
+
+.experience-label {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+
+  font-size: 0.8em;
+  font-weight: bolder;
+  padding: 0 0.5em;
+  background-color: rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  transition: opacity 0.5s;
 }
